# flow-manager

./: Cargo.toml  Justfile  README.md  agents.md  build.rs  ci-test.env  install.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
_docs/: bitbucket-provider-analysis.md  command-specifications.md  component-specification.md  config-structure.md  flow-manager-behaviours.md  github-provider-analysis.md  gitlab-provider-analysis.md  porcelain-commands-proposal.md  project-structure.md  provider-evolutions-extensibilities.md
_docs/inbox/: project-improvement.md  review-proposal.md
_docs/wip/: ci-mode-proposal.md
assets/scripts/: ado.cs  fm.cs  git.cs  sonar.cs  todo.cs
scripts/: fm-backup.cs
src/: lib.rs  main.rs
src/cli/: mod.rs
src/commands/: commit.rs  common.rs  context.rs  doctor.rs  init.rs  mod.rs  push.rs  sonar.rs  sync.rs
src/commands/pipeline/: mod.rs
src/commands/plumbing/: ado.rs  git.rs  mod.rs
src/commands/porcelain/: mod.rs
src/commands/pr/: feedback.rs  mod.rs  thread.rs
src/commands/task/: mod.rs
src/commands/todo/: mod.rs
src/commands/work/: mod.rs
src/core/: branch_cache.rs  ci.rs  config.rs  context.rs  error.rs  mod.rs  models.rs
src/providers/: adonet.rs  factory.rs  git.rs  mod.rs  sonar.rs
