[package]
name = "fm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
mockito = "1.5.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
config = "0.15.22"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
tokio = { version = "1.38", features = ["full"] }
toml = "1.1.2"
